# Lampyr

./: .gitignore  README.md  agentproj.py  install.bat  lampyr_setup.bat  lampyr_update.bat  mx_hardware.yaml  pyproject.toml  untitled1.py  update.bat  wishlist
OLDCODE_SCAVENGEDELETE/: arduino.py  bandit_task_utils.py  bandit_task_v0_0_0.py  bandit_task_v0_0_1.py
firmware/banditv0_0_0/: banditv0_0_0.ino
lampyr/: __init__.py  actions.py  app.py  config.py  files.py  main.py  primatives.py  rigcontrol.py  version.py
lampyr/analysis/: __init__.py  data.py  longtidy.py  segments.py  time.py  traces.py
lampyr/behaviors/: bandit.py
lampyr/interfaces/click_cli/: app.py
lampyr/interfaces/textual_tui/: app.py  app.tcss
lampyr/managers/: __init__.py  abstract.py  data.py  hardware.py  notification.py  plugins.py
lampyr/rigs/: rigcontrol.py
lampyr/segments/: __init__.py  abstract.py  behavior.py  control.py  paradigm.py
lampyr/tasks/: bandit.py  habituation.py
lampyr/visualize/: session.py
tasks/: __init__.py  bandit.py  habituation.py
tests/primatives/: segments.py
