[project]
name = "Lampyr"
version = "0.0.1"
description = "NA"
authors = [
    { name = "Maxwell Madden", email = "mxwllmadden@gmail.com" }
]
dependencies = [
    "pyserial",
    "click",
    "textual",
    "art",
    "numpy>=1.21",
    "pandas",
    "h5py",
    "requests",
]
readme = ""
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/mxwllmadden"

[project.scripts]
lampyr = "lampyr.interfaces.click_cli.app:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["lampyr", "lampyr.*"]

